argocd/apps/00-infra/cilium/gateway/gateway-cilium.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-gateway
  namespace: default
  annotations:
    io.cilium/lb-ipam-ips: 10.34.48.150   # CiliumLoadBalancerIPPool에서 할당된 IP 외부접속용
spec:
  gatewayClassName: cilium                
  listeners:
  # - name: https
  #   protocol: HTTPS
  #   port: 443
  #   tls:
  #     mode: Terminate
  #     certificateRefs:
  #     - kind: Secret
  #       name: gateway-cert                # cert-manager가 발급한 인증서 Secret
  #   allowedRoutes:
  #     namespaces:
  #       from: All
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: All
